force-app/main/default/objects/Suggestion__c/fields/Number_of_Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_Open__c</fullName>
    <formula>IF( ISBLANK( Implemented_Date__c ) ,  TODAY() -  DATEVALUE( CreatedDate ) , Implemented_Date__c - DATEVALUE( CreatedDate ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>