force-app/main/default/objects/Suggestion__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <picklist>
        <picklistValues>
            <fullName>New</fullName>
            <default>true</default>
        </picklistValues>
        <picklistValues>
            <fullName>Under Consideration</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>In Progress</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Implemented</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>