force-app/main/default/objects/Suggestion__c/fields/Suggestion_Category__c.field-meta.xml
<CustomField>
    <fullName>Suggestion_Category__c</fullName>
    <label>Suggestion Category</label>
    <picklist>
        <picklistValues>
            <fullName>Customer Service</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Employee Services</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Facilities/ IT</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Kitchen Snacks</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Other</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>